# helm-plugin-fleet-action

./: .gitignore  Makefile  README.md  README_CN.md  build.bat  pyproject.toml
fleet_action/: esi.py  models.py  plugin.py  routers.py  schemas.py
fleet_action/frontend/: index.html  package-lock.json  package.json  vite.config.ts
fleet_action/frontend/src/: App.vue  api.ts  main.ts
fleet_action/frontend/src/components/: ConfirmDialog.vue
fleet_action/frontend/src/composables/: useConfirmDialog.ts
fleet_action/frontend/src/i18n/: en.ts  index.ts  zh.ts
fleet_action/frontend/src/router/: index.ts
fleet_action/frontend/src/views/: ActionDetailView.vue  ActionsListView.vue  CharacterPapView.vue  CreateActionView.vue
fleet_action/migrations/: alembic.ini  env.py
fleet_action/migrations/versions/: 0001_initial.py  0002_fleet_id_nullable.py
