[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "helm-plugin-fleet-action"
version = "0.1.1"
description = "EVE Online 舰队行动管理，支持手动发放 PAP 出勤记录"
requires-python = ">=3.12"
dependencies = []

[project.entry-points."helm.plugins"]
helm-plugin-fleet-action = "fleet_action.plugin:FleetActionPlugin"

[tool.setuptools.packages.find]
# 自动发现 fleet_action 包及其子包
where = ["."]

[tool.setuptools.package-data]
# 将前端 bundle 作为 package-data 随 wheel 一同发布
# Helm 在安装后从 fleet_action/frontend/dist/index.js 加载前端
fleet_action = [
    "frontend/dist/**",
    "migrations/versions/*.py",
    # 以下两行仅在保留本地开发辅助文件时才需要（安装器不再使用）
    # "migrations/alembic.ini",
    # "migrations/env.py",
]
